namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-pecs-profile-ui-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-pecs-profile-ui-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "move-a-prisoner-digital"
    cloud-platform.justice.gov.uk/application: "HMPPS PECS Profile UI service"
    cloud-platform.justice.gov.uk/owner: "moveaprisoner@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-pecs-profile-ui.git"
    cloud-platform.justice.gov.uk/team-name: "Move a Prisoner"
